padthv1 - An old-school additive polyphonic synthesizer
-------------------------------------------------------

ChangeLog


GIT HEAD

- Whether to use native file browser/requester dialogs is
  now an effective option when launching under NSM session
  management (was once disabled initially). (EXPERIMENTAL)
- Trying to get CC14 MSB+LSB (course+fine) running status on,
  no matter whether each pairing event are under 200ms apart.
  (EXPERIMENTAL)
- A little hardening on the configure (autoconf) macro side.
- An anti-flooding timer is now in place in MIDI Controller
  assignment (aka. MIDI learn) dialog. (EXPERIMENTAL)


0.8.6  2017-12-20  The End of Autumn'17 release.

- Set on a minimum attack time of 500usec as much to prevent
  audible clicking on low-pitched notes.


0.8.5  2017-10-29  An Autumn'17 release.

- Opening multiple preset files is now possible, populating
  the preset drop-down listing, while only the first one is
  loaded effectively into the scene as usual.
- Mono(phonic) "Legato" mode option introduced.
- Desktop entry specification file is now finally independent
  from all build/configure template chains, whatever.
- Updated target path for freedesktop.org's AppStream metainfo
  file (formerly AppData).


0.8.4  2017-08-22  A Late-Summer'17 release.

- First public release.


0.8.3  2017-07-20  Initial change-log entry.